--- a/src/app/fairetransaction/fairetransaction.component.html
+++ b/src/app/fairetransaction/fairetransaction.component.html
@@ -1,1 +1,55 @@
-<p>fairetransaction works!</p>
+<div class="container">
+  <div class="col-md-9 col-sm-6 col-xs-9">
+    <div class="panel panel-default">
+          <div class="panel-heading">
+            Faire une transaction
+          </div>
+        <div class="panel-body">
+            <form #f="ngForm" (ngSubmit)="faireTransaction(f.value)" >
+              <div class="form-group">
+                <h3>Informations de l'emetteur</h3>
+                <label class="control-label">Nom Emetteur</label>
+                <input class="form-control" type="text" name="nomEmetteur" ngModel>
+              </div>
+              <div class="form-group">
+                <label class="control-label">Prenom emetteur</label>
+                <input class="form-control" type="text" name="prenomEmetteur" ngModel>
+              </div>
+              <div class="form-group">
+                <label class="control-label">Telephone emetteur</label>
+                <input class="form-control" type="number" name="telEmetteur" ngModel>
+              </div>
+              <div class="form-group">
+                <label class="control-label">Cni emetteur</label>
+                <input class="form-control" type="number" name="cni" ngModel>
+              </div>
+              <div class="form-group">
+                <h3>Informations du recepteur</h3>
+                <label class="control-label">Nom Recepteur</label>
+                <input class="form-control" type="text" name="nomRecepteur" ngModel>
+              </div>
+              <div class="form-group">
+                <label class="control-label">Prenom Recepteur</label>
+                <input class="form-control" type="text" name="prenomRecepteur" ngModel>
+              </div>
+              <div class="form-group">
+                <label class="control-label">Telephone recepteur</label>
+                <input class="form-control" type="number" name="telRecepteur" ngModel>
+              </div>
+              <div class="form-group">
+                <label class="control-label">Montant</label>
+                <input class="form-control" type="number" name="montant" ngModel>
+              </div>
+              <div class="form-group">
+                <h3>Informations de la transaction</h3>
+                <label class="control-label">Date</label>
+                <input class="form-control" type="date" name="date" ngModel>
+              </div>
+              
+              <button class="btn btn-success" type="submit">Envoyer</button>
+            </form>
+
+        </div>
+    </div>
+  </div>
+</div>
